Fix the outline generation bug

The outline generation algorithm has a small bug, which
results in the starting point be repeated twice in the
beginning of the path, instead of being put into the
end. Now we just explicitly close the path to workaround
it in KisPixelSelection::recalculateOutlineCache().

BUG:329215