krita/image/tests/kis_selection_test.cpp
@@ -304,6 +304,35 @@ void KisSelectionTest::testSetParentNodeBeforeCreation()
     QCOMPARE(selection->pixelSelection()->parentNode(), KisNodeWSP(image->root()));
 }
 
+void KisSelectionTest::testOutlineGeneration()
+{
+    KisSelectionSP sel = new KisSelection();
+    sel->pixelSelection()->select(QRect(428,436, 430,211), 128);
+
+    QVERIFY(sel->outlineCacheValid());
+
+    QPainterPath originalOutline = sel->outlineCache();
+
+    sel->pixelSelection()->invalidateOutlineCache();
+    sel->recalculateOutlineCache();
+
+    QPainterPath calculatedOutline = sel->outlineCache();
+
+    QPainterPath closedSubPath = calculatedOutline;
+    closedSubPath.closeSubpath();
+
+    /**
+     * Our outline generation code has a small problem: it can
+     * generate a polygon, which isn't closed (it'll repeat the first
+     * point instead). There is a special workaround for it in
+     * KisPixelSelection::recalculateOutlineCache(), which explicitly
+     * closes the path, so here we just check it.
+     */
+
+    bool isClosed = closedSubPath == calculatedOutline;
+    QVERIFY(isClosed);
+}
+
 QTEST_KDEMAIN(KisSelectionTest, NoGUI)
 #include "kis_selection_test.moc"
 
